// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalysisCard Does not render a WeaknessLink when given a title but no Link 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="title"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiCard-root shadow-md css-935hc6-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root p-0 last:pb-0 css-46bh2p-MuiCardContent-root"
    >
      <div
        class="flex flex-wrap md:flex-nowrap items-start px-2 py-4 md:py-6 md:px-8 justify-between"
      >
        <div>
          <h2
            class="leading-6 text-h2 font-poppins font-bold"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium mb-[3px] pb-[1px] css-1yq1soz-MuiSvgIcon-root"
              data-testid="LightbulbIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7z"
              />
            </svg>
             Test title
          </h2>
          <div
            class="pl-1 mt-1 flex flex-col md:mt-0 md:flex-row md:flex-wrap md:space-x-6"
          >
            <div
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-calendar mr-1.5 h-3 w-3 flex-shrink-0 text-gray-400"
                data-icon="calendar"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
                  fill="currentColor"
                />
              </svg>
              2023-01-17T13:12:00.000Z
            </div>
            <div
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium mr-1 h-3 w-3 flex-shrink-0 text-gray-400 css-1yq1soz-MuiSvgIcon-root"
                data-testid="LightbulbIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7z"
                />
              </svg>
              none
            </div>
          </div>
        </div>
      </div>
      <p
        class="leading-6 text-body1 font-nunito max-w-prose pl-2.5 pr-6 md:pl-9 pb-6"
      >
        Test description
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnalysisCard renders a weaknessLink without title 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="title"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiCard-root shadow-md css-935hc6-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root p-0 last:pb-0 css-46bh2p-MuiCardContent-root"
    >
      <div
        class="flex flex-wrap md:flex-nowrap items-start px-2 py-4 md:py-6 md:px-8 justify-between"
      >
        <div>
          <h2
            class="leading-6 text-h2 font-poppins font-bold"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium mb-[3px] pb-[1px] css-1yq1soz-MuiSvgIcon-root"
              data-testid="LightbulbIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7z"
              />
            </svg>
             Test title
          </h2>
          <div
            class="pl-1 mt-1 flex flex-col md:mt-0 md:flex-row md:flex-wrap md:space-x-6"
          >
            <div
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-calendar mr-1.5 h-3 w-3 flex-shrink-0 text-gray-400"
                data-icon="calendar"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
                  fill="currentColor"
                />
              </svg>
              2023-01-17T13:12:00.000Z
            </div>
            <div
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium mr-1 h-3 w-3 flex-shrink-0 text-gray-400 css-1yq1soz-MuiSvgIcon-root"
                data-testid="LightbulbIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7z"
                />
              </svg>
              none
            </div>
            <div
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-link mr-1.5 h-3 w-3 flex-shrink-0 text-gray-400"
                data-icon="link"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="w-[320px] lg:w-auto inline-block"
              >
                <a
                  class="underline truncate block"
                  href="Test weakness link"
                  target="_blank"
                >
                  Test weakness link
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="leading-6 text-body1 font-nunito max-w-prose pl-2.5 pr-6 md:pl-9 pb-6"
      >
        Test description
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnalysisCard renders all passed props 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="title"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiCard-root shadow-md css-935hc6-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root p-0 last:pb-0 css-46bh2p-MuiCardContent-root"
    >
      <div
        class="flex flex-wrap md:flex-nowrap items-start px-2 py-4 md:py-6 md:px-8 justify-between"
      >
        <div>
          <h2
            class="leading-6 text-h2 font-poppins font-bold"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium mb-[3px] pb-[1px] css-1yq1soz-MuiSvgIcon-root"
              data-testid="LightbulbIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7z"
              />
            </svg>
             Test title
          </h2>
          <div
            class="pl-1 mt-1 flex flex-col md:mt-0 md:flex-row md:flex-wrap md:space-x-6"
          >
            <div
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-calendar mr-1.5 h-3 w-3 flex-shrink-0 text-gray-400"
                data-icon="calendar"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
                  fill="currentColor"
                />
              </svg>
              2023-01-17T13:12:00.000Z
            </div>
            <div
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium mr-1 h-3 w-3 flex-shrink-0 text-gray-400 css-1yq1soz-MuiSvgIcon-root"
                data-testid="LightbulbIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7z"
                />
              </svg>
              none
            </div>
            <div
              class="flex items-center text-sm text-gray-500"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-link mr-1.5 h-3 w-3 flex-shrink-0 text-gray-400"
                data-icon="link"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="w-[320px] lg:w-auto inline-block"
              >
                <a
                  class="underline truncate block"
                  href="Test weakness link"
                  target="_blank"
                >
                  Test weakness title
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="leading-6 text-body1 font-nunito max-w-prose pl-2.5 pr-6 md:pl-9 pb-6"
      >
        Test description
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnalysisCardLoading renders as expected 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root animate-pulse css-bhp9pd-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardContent-root space-y-3 css-46bh2p-MuiCardContent-root"
  >
    <div
      className="flex items-center justify-between mb-2"
    >
      <div
        className="flex space-x-2"
      >
        <div
          className="w-8 h-8 bg-gray-200 rounded-full dark:bg-gray-500 "
        />
        <div
          className="h-8 bg-gray-200 rounded-full dark:bg-gray-500 w-64"
        />
      </div>
    </div>
    <span
      className="sr-only"
    >
      Loading...
    </span>
    <div
      className="max-w-prose my-2 h-2.5 bg-gray-200 rounded-full dark:bg-gray-500 w-40 mb-2"
    />
    <div
      className="space-y-2.5 max-w-prose"
    >
      <div
        className="flex items-center w-full space-x-2"
      >
        <div
          className="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-32"
        />
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-24"
        />
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-full"
        />
      </div>
      <div
        className="flex items-center w-full space-x-2 max-w-[480px]"
      >
        <div
          className="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-full"
        />
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-full"
        />
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-24"
        />
      </div>
      <div
        className="flex items-center w-full space-x-2 max-w-[400px]"
      >
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-full"
        />
        <div
          className="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-80"
        />
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-full"
        />
      </div>
      <div
        className="flex items-center w-full space-x-2 max-w-[480px]"
      >
        <div
          className="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-full"
        />
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-full"
        />
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-24"
        />
      </div>
      <div
        className="flex items-center w-full space-x-2 max-w-[440px]"
      >
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-32"
        />
        <div
          className="h-2.5 bg-gray-300 rounded-full dark:bg-gray-600 w-24"
        />
        <div
          className="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-full"
        />
      </div>
    </div>
    <div
      className="w-full bg-gray-200 dark:bg-gray-700 h-[400px] rounded-lg"
    />
  </div>
</div>
`;
